--- a/isometric-projection/src/App.css
+++ b/isometric-projection/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.isometric-projection{
+  background-color: #49b293;
+  width: 1000px;
+  height: 1000px;
+  margin: 100px auto 0 auto;
+  transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg);
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 
-.App-link {
-  color: #61dafb;
+.field{
+  width:10px;
+  height: 10px;
+  border: 0.5px solid  rgba(192,192,192, 0.5);;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.field__visited{
+  background-color: red !important;
+}
+
+html, body {
+  background-color: #f2f2f2;
 }
